# pipeline_relatorios

./: .gitignore  README.md  inicia.bat  pyproject.toml  requirements.txt
logs/: log_atualizacao.txt
logs/python/: logs.py
src/: main.py
src/config/: config.py
src/controller/: executor.py
src/controller/python/: pendente_ga.py  pendente_gb.py  pendente_gb_rede_roub.py  pendente_gd_gagb.py
src/emails/: assinatura.py  estrutura_email.py
src/emails/config/: config.py
src/functions/: atualiza_relatorio.py  conecta_sftp.py  envia_email.py  extrai_imagem_relatorio.py  move_relatorio.py
src/functions/middleware/: knime_atualiza_pend_gb.py  knime_atualiza_pend_gb_rede_roubada.py  knime_atualiza_rede_roubada.py
tests/: main.py
tests/config/: config.py
